# lumio

./: .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json  vitest.workspace.ts
.github/workflows/: ci.yml
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.js  vite.config.js.map  vite.config.ts  vitest.config.ts
apps/desktop/scripts/: dev-tauri.mjs
apps/desktop/src/: main.tsx  smoke.test.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/shell/: cacheManager.test.ts  cacheManager.ts  index.ts  syncWorker.test.ts  syncWorker.ts  tokenVault.test.ts  tokenVault.ts
apps/web/: README.md  next.config.mjs  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/app/e2e-library/: page.tsx
apps/web/e2e/: README.md  library.spec.ts  sign-in.spec.ts
apps/web/lib/: auth-callback.ts  supabase.ts  supabaseErrors.ts  utils.ts
apps/web/tests/: auth-library.test.ts  smoke.test.ts  supabase-errors.test.ts  upload-errors.test.ts
docs/: OPERATIONS.md  PRD.md  TRD.md
infra/supabase/: README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
infra/supabase/migrations/: 0001_initial_schema.sql
infra/supabase/tests/: migration-schema.integration.test.ts  migration-schema.test.ts
scripts/: README.md  install-linux.sh  release.sh
(+2 files in other folders)
